--- a/11-state/src/App.css
+++ b/11-state/src/App.css
@@ -1,3 +1,17 @@
 .App {
-  text-align: center;
+    text-align: center;
+}
+
+
+h1 {
+    padding: 2rem;
+    font-size: 5rem;
+}
+
+button {
+    padding: 1rem 0.5rem;
+    background-color: #ffb800;
+    color: #0b7373;
+    border: 0;
+    border-radius: 0.8rem;
 }
